--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <input type="text" ng-model="search" placeholder="Search by name">
 
-    <table>
-        <tr>
+    <h4>Search Student's Details by ID,Name,Age,Grade,Courses</h4>
+
+    <table class="tbl" ng-show="search">
+        <tr class="heading">
             <th>ID</th>
             <th>Name</th>
             <th>Age</th>
@@ -33,6 +35,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.0/angular.min.js"></script>
     <script src="app.js"></script>
+
 </body>
 
 </html>
