--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <div class="serchbar">
         <div>
-            <input type="text" ng-model="search" placeholder="Search by name">
+            <input class="ipt" type="text" ng-model="search" placeholder="Search by ID,Name,Age,Grade,Courses">
         </div>
         <div>
-            <h4>Search Student's Details by ID,Name,Age,Grade,Courses</h4>
+            <h4 class="text" >Search Student's Details by ID,Name,Age,Grade,Courses</h4>
         </div>
     </div>
 
